# pi-relay

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  GAPS.md  PI.compaction.md  PI.md  README.md  TESTPLAN.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
rust/: Cargo.toml  README.md  WORKLOG.md  rust-toolchain.toml
rust/crates/agent-core/: Cargo.toml  README.md
rust/crates/agent-core-loop/: Cargo.toml
rust/crates/agent-core-loop/src/: action.rs  event.rs  ids.rs  lib.rs  loop.rs  mailbox.rs  message.rs  runner.rs  runtime.rs  state.rs  transcript.rs  transcript_record.rs
rust/crates/agent-core/src/: action.rs  context_item.rs  event.rs  ids.rs  lib.rs  loop.rs  mailbox.rs  message.rs  record.rs  runner.rs  state.rs  transcript.rs  transcript_item.rs
rust/crates/agent-daemon/: Cargo.toml
rust/crates/agent-daemon/src/: adjacent_sessions.rs  auth.rs  auth_tests.rs  codec.rs  config.rs  delegation_context.rs  delegation_runner.rs  delegation_runner_tests.rs  delegation_snapshot.rs  delegation_tools.rs  handoff.rs  handoff_tests.rs  history.rs  history_fork.rs  history_fork_rpc_tests.rs  history_tests.rs  main.rs  mcp_auth.rs  mcp_auth_integration_tests.rs  mcp_auth_tests.rs  model_metadata.rs  overlay.rs  provider_runtime.rs  pull_requests.rs  repl.rs  rpc_views.rs  runtime.rs  runtime_hosts.rs  session_start.rs  stage_runner.rs  stage_runner_tests.rs  stage_tools.rs  state.rs  state_tests.rs  subagents.rs  types.rs  types_tests.rs  workflow_tools.rs  workflows.rs  workspace_selection.rs  (+1 more)
rust/crates/agent-mcp/: Cargo.toml  build.rs
rust/crates/agent-mcp-types/: Cargo.toml
rust/crates/agent-mcp-types/src/: catalog.rs  catalog_tests.rs  lib.rs  manager.rs  oauth.rs
rust/crates/agent-mcp/src/: catalog.rs  client.rs  config.rs  config_tests.rs  http_sse.rs  http_transport.rs  http_transport_tests.rs  lib.rs  manager.rs  manager_oauth_tests.rs  manager_tests.rs  oauth_callback.rs  oauth_config.rs  oauth_credentials.rs  oauth_credentials_tests.rs  oauth_discovery.rs  oauth_http.rs  oauth_login.rs  oauth_login_tests.rs  oauth_runtime.rs  oauth_runtime_tests.rs  result.rs  result_tests.rs
rust/crates/agent-orchestrator/: Cargo.toml  README.md
rust/crates/agent-orchestrator/src/: lib.rs  registry.rs
rust/crates/agent-perf/: Cargo.toml  README.md
rust/crates/agent-perf/examples/: disabled_overhead.rs
rust/crates/agent-perf/src/: lib.rs  lib_tests.rs
rust/crates/agent-prompt/: Cargo.toml
rust/crates/agent-prompt/src/: lib.rs
rust/crates/agent-protocol/: Cargo.toml
rust/crates/agent-protocol/src/: lib.rs
rust/crates/agent-provider/: Cargo.toml
rust/crates/agent-provider/src/: anthropic.rs  common.rs  http.rs  lib.rs  openai.rs  request_body.rs  sse.rs  token_estimator.rs  transcript.rs
rust/crates/agent-rpc/: Cargo.toml  README.md
rust/crates/agent-rpc/src/: lib.rs
rust/crates/agent-runtime/: Cargo.toml  README.md
rust/crates/agent-runtime-protocol/: Cargo.toml
rust/crates/agent-runtime-protocol/src/: lib.rs
rust/crates/agent-runtime/src/: lib.rs  main.rs
rust/crates/agent-session/: Cargo.toml  README.md
rust/crates/agent-session/src/: action.rs  action_queue.rs  auto_compaction.rs  boundary.rs  compaction.rs  compaction_state.rs  context.rs  event.rs  external_work.rs  fork.rs  history_edit.rs  input.rs  lib.rs  maintenance.rs  model_context.rs  outstanding_actions.rs  pending_actions.rs  registry.rs  runner.rs  session.rs  session_log.rs  session_tests.rs  storage.rs  transcript.rs  transcript_store.rs
rust/crates/agent-store/: Cargo.toml
rust/crates/agent-store/examples/: migrate_stage_to_delegation_state.rs
rust/crates/agent-store/src/: lib.rs  postgres.rs
rust/crates/agent-tools/: Cargo.toml
rust/crates/agent-tools/src/: context.rs  display.rs  error.rs  lib.rs  output.rs  registry.rs
rust/crates/agent-vocab/: Cargo.toml
rust/crates/agent-vocab/src/: daemon_observation.rs  ids.rs  lib.rs  macros.rs  message.rs  provider.rs  transcript_item.rs
rust/crates/orchestrator-core/: Cargo.toml
rust/crates/orchestrator-core/src/: lib.rs
rust/crates/pi-cli/: Cargo.toml
rust/crates/pi-cli/src/: main.rs
rust/crates/pi-web/: Cargo.toml
rust/crates/pi-web/src/: assets.rs  config.rs  git.rs  lib.rs  main.rs  staging.rs
rust/crates/relay-core-host/: Cargo.toml
rust/crates/relay-core-host/src/: lib.rs  main.rs
rust/crates/session-core/: Cargo.toml
rust/crates/session-core-host/: Cargo.toml
rust/crates/session-core-host/src/: lib.rs  main.rs
rust/docs/: architecture.md  assistant-boundary-plan.html  auto-compaction-plan.md  compaction-and-history-forest.md  design-decisions.md  draft-sessions-and-history-plan.md  frontend-session-cache-transcript-index-plan.md  native-compaction-v1-migration.md  prefix-caching-plan.html  provider-api-support.md  provider-replay-continuity-plan.html  queued-message-mutations-plan.md  responses-reasoning-tool-continuity.html  runtime.md  selected-session-performance-fix-plan.md  session-performance-regression-repair-plan.md  session-sync-redesign-plan.md  steer-promotion-race.html  subagent-source-ref-merge-plan.md  temp-stage-to-delegation-migration.md  tool-collapse-proposals.html  tool-surface-plan.html  turn-card-transcript-plan.md  websocket-rpc.md
rust/docs/modules/: agent-core.md  agent-daemon.md  agent-prompt.md  agent-provider.md  agent-session.md  agent-store.md  agent-tools.md  agent-vocab.md  pi-web.md
rust/docs/perf/: model-request-hot-path-baseline.md
rust/docs/plans/: README.md  build-map.md  codex-model-capability-discovery-pr.md  legacy-retirement-plan.md  mcp-client.md  model-request-hot-path-complexity.md  phase-0-doc-edits.md  pr-stack-inspector-graph.md  provider-modernization-stack.md  subagent-workflows.md  tool-surface.md  transcript-ui.md  workflow-orchestration-explainer.html  workflow-orchestration.md
rust/docs/workflows/: metric_hillclimb.py  parallel_race.py  review_loop.py  workflow_sdk.py
rust/migrations/: native-compaction-v1.sql
rust/scripts/: migrate-session-sync-v1.sql  migrate-stage-to-delegation-state.sh
(+167 files in other folders)
