[workspace]
members = [
    "crates/agent-vocab",
    "crates/agent-core",
    "crates/agent-session",
    "crates/agent-store",
    "crates/agent-prompt",
    "crates/agent-provider",
    "crates/agent-tools",
    "crates/agent-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
agent-vocab = { path = "crates/agent-vocab" }
agent-core = { path = "crates/agent-core" }
agent-session = { path = "crates/agent-session" }
agent-store = { path = "crates/agent-store" }
agent-prompt = { path = "crates/agent-prompt" }
agent-provider = { path = "crates/agent-provider" }
agent-tools = { path = "crates/agent-tools" }
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reflink-copy = "0.1.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29"
uuid = { version = "1", features = ["serde", "v4"] }
