[workspace]
members = [
    "crates/agent-vocab",
    "crates/agent-core",
    "crates/agent-session",
    "crates/agent-store",
    "crates/agent-prompt",
    "crates/agent-provider",
    "crates/agent-tools",
    "crates/agent-mcp",
    "crates/agent-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
agent-vocab = { path = "crates/agent-vocab" }
agent-core = { path = "crates/agent-core" }
agent-session = { path = "crates/agent-session" }
agent-store = { path = "crates/agent-store" }
agent-prompt = { path = "crates/agent-prompt" }
agent-provider = { path = "crates/agent-provider" }
agent-tools = { path = "crates/agent-tools" }
agent-mcp = { path = "crates/agent-mcp" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
cap-fs-ext = "=3.4.5"
cap-std = "=3.4.5"
futures-util = "0.3"
http = "1"
oauth2 = { version = "5", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "=1.8.0", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client", "which-command"] }
process-wrap = { version = "9.1.0", features = ["tokio1"] }
pretty_assertions = "1.4.1"
reflink-copy = "0.1.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sse-stream = "0.2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
thiserror = "2"
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tokio-tungstenite = "0.29"
uuid = { version = "1", features = ["serde", "v4"] }
