[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pi-agentd"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
agent-mcp = { workspace = true }
agent-provider = { workspace = true }
agent-prompt = { workspace = true }
agent-session = { workspace = true }
agent-store = { workspace = true }
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
reflink-copy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
