[package]
name = "agent-daemon"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pi-agentd"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
agent-mcp-types = { workspace = true }
agent-provider = { workspace = true }
agent-prompt = { workspace = true }
agent-session = { workspace = true }
agent-store = { workspace = true }
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
agent-runtime-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
cap-fs-ext = { workspace = true }
cap-std = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
sqlx = { workspace = true }
