[package]
name = "agent-mcp-types"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
