[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
rmcp = { workspace = true }
process-wrap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
