[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
rmcp = { workspace = true, features = ["auth"] }
process-wrap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sse-stream = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
agent-prompt = { workspace = true }
pretty_assertions = { workspace = true }
