[package]
name = "agent-provider"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
async-trait = { workspace = true }
os_info = "3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zstd = "0.13"
