[package]
name = "agent-runtime-protocol"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-mcp-types = { workspace = true }
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

