[package]
name = "agent-session"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-core = { workspace = true }
agent-perf = { workspace = true }
agent-vocab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
agent-perf = { workspace = true, features = ["test-support"] }
tokio = { workspace = true }
