[package]
name = "agent-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-vocab = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
