[package]
name = "agent-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-perf = { workspace = true }
agent-session = { workspace = true }
agent-vocab = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
