[package]
name = "pi-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pi-rs"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
agent-provider = { workspace = true }
agent-session = { workspace = true }
agent-tools = { workspace = true }
agent-vocab = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
